--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,12 +10,16 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-black-pearl:                   #041827;
+$color-black-pearl-form:                   #041427;
+$color-black-pearl-page-shading:                   #03101b;
+$color-alice-blue:                   #f2f5f6;
+$color-deep-sky-blue:                   #00b2ff;
+$color-whisper:                   #e5e5e5;
 
 // Gradient
 
-$black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$black-pearl-to-transparent:                    linear-gradient(180deg, $color-black-pearl 84.9%, rgba(4, 24, 39, 0) 100%);
 
 // Typography
 // ---------------------------------
