--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,6 +16,7 @@ $color-black-pearl-page-shading:                   #03101b;
 $color-alice-blue:                   #f2f5f6;
 $color-deep-sky-blue:                   #00b2ff;
 $color-whisper:                   #e5e5e5;
+$color-whisper-border:                   #ebebeb;
 
 // Gradient
 
