--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,7 +18,8 @@
 // Blocks
 // ---------------------------------
 
-//@import "blocks/btn";
+@import "blocks/header";
+@import "blocks/btn";
 //@import "blocks/modal";
 
 // ---------------------------------
