--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -105,4 +105,9 @@
   @include vp-1023 {
     display: none;
   }
+
+  @include hover-focus {
+    border-color: $color-deep-sky-blue;
+    color: $color-deep-sky-blue;
+  }
 }
