--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,10 @@
 // ---------------------------------
 
 @import "blocks/header";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/nav";
+@import "blocks/contacts";
 @import "blocks/btn";
 //@import "blocks/modal";
 
