Стилизует подвал и главный экран

--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -8,6 +8,8 @@
   line-height: 17px;
   justify-content: center;
   color: $color-default-white;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
 
   background-color: $color-transparent;
   border: 1px solid $color-default-white;
