--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,12 +18,14 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/btn";
 @import "blocks/header";
+@import "blocks/top-section";
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/nav";
 @import "blocks/contacts";
-@import "blocks/btn";
+@import "blocks/accordion";
 //@import "blocks/modal";
 
 // ---------------------------------
