--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,7 +1,3 @@
-.contacts {
-  padding: 55px 0;
-}
-
 .contacts__title {
   font-family: $ff-roboto-condensed;
   font-weight: 400;
@@ -10,6 +6,17 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   margin: 0 0 20px 0;
+
+  @include vp-767 {
+    margin: 0;
+    padding: 20px 40px 15px 0;
+  }
+}
+
+.contacts__wrapper {
+  @include vp-767 {
+    padding-bottom: 10px;
+  }
 }
 
 .contacts__address {
