--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,6 +4,11 @@
   justify-content: space-between;
   align-items: center;
   background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
+  z-index: 10;
+
+  @include vp-1920 {
+    left: calc((100% - 1920px) / 2);
+  }
 }
 
 .header__logo-link {
@@ -20,15 +25,12 @@
   }
 }
 
-.header__logo-desktop {
+.header__logo {
   @include vp-767 {
-    display: none;
-  }
-}
-
-.header__logo-mobile {
-  @include vp-768 {
-    display: none;
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    object-position: left center;
   }
 }
 
