--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,7 +1,3 @@
-.nav {
-  padding: 55px 0;
-}
-
 .nav__title {
   font-family: $ff-roboto-condensed;
   font-weight: 400;
@@ -10,6 +6,11 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   margin: 0 0 20px 0;
+
+  @include vp-767 {
+    margin: 0;
+    padding: 20px 40px 15px 0;
+  }
 }
 
 .nav__list {
@@ -19,6 +20,10 @@
   column-count: auto;
   column-width: 220px;
   column-gap: 30px;
+
+  @include vp-767 {
+    padding-bottom: 10px;
+  }
 }
 
 .nav__item {
