--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,4 +5,13 @@
 
 .social__link {
   padding: 5px;
+  margin-right: 15px;
+
+  @include vp-1023 {
+    margin: 0 0 0 15px;
+  }
+
+  @include vp-767 {
+    margin: 0 7px;
+  }
 }
