Стилизует блок преимуществ

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-black-pearl: #041827;
 $color-black-pearl-form: #041427;
 $color-black-pearl-page-shading: #03101b;
 $color-alice-blue: #f2f5f6;
+$color-alice-blue-bg: #f8fdff;
 $color-deep-sky-blue: #00b2ff;
 $color-whisper: #e5e5e5;
 $color-whisper-border: #ebebeb;
