--- a/source/sass/blocks/top-section.scss
+++ b/source/sass/blocks/top-section.scss
@@ -1,5 +1,6 @@
 .top-section {
   position: relative;
+  margin-bottom: 120px;
   padding-top: 305px;
   padding-bottom: 280px;
 
@@ -9,11 +10,13 @@
   }
 
   @include vp-1023 {
+    margin-bottom: 80px;
     padding-top: 180px;
     padding-bottom: 205px;
   }
 
   @include vp-767 {
+    margin-bottom: 50px;
     padding-top: 150px;
     padding-bottom: 190px;
   }
@@ -22,6 +25,7 @@
 .top-section__bg {
   position: absolute;
   width: 100vw;
+  min-width: 320px;
   height: 100%;
   left: 0;
   top: 0;
