--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -25,13 +25,18 @@ html {
   text-rendering: optimizeLegibility;
   // если по прежнему есть проблемы с выравниванием
   // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 19px;
+  }
 }
 
 body {
   width: 100%;
   height: 100%;
 
-  background-color: $color-whisper;
+  background-color: $color-alice-blue-bg;
 }
 
 a {
