--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/top-section";
+@import "blocks/advantages";
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/nav";
