--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/header";
 @import "blocks/top-section";
 @import "blocks/advantages";
+@import "blocks/about";
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/nav";
