--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/top-section";
 @import "blocks/advantages";
 @import "blocks/about";
+@import "blocks/catalog";
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/nav";
