--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -8,6 +8,7 @@
 
   img {
     width: 150px;
+    max-width: none;
     height: 320px;
     margin-right: 100px;
 
@@ -64,5 +65,9 @@
 
   &--active {
     display: block;
+  }
+
+  &:focus-visible {
+    outline: $color-black-pearl auto 1px;
   }
 }
