--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -16,9 +16,7 @@
   visibility: hidden;
   opacity: 0;
 
-  transition: opacity $trans-modal,
-    transform $trans-modal,
-    visibility $trans-modal;
+  transition: opacity $trans-modal, transform $trans-modal, visibility $trans-modal;
 
   pointer-events: none;
 
@@ -59,10 +57,10 @@
   &__content {
     position: relative;
 
-    width: 600px;
+    width: 500px;
     padding: 40px;
 
-    background-color: $color-default-white;
+    background-color: $color-deep-sky-blue;
 
     @include vp-767 {
       width: 100%;
@@ -72,8 +70,8 @@
 
   &__close-btn {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 15px;
+    right: 15px;
     z-index: 1;
 
     width: 40px;
@@ -115,5 +113,142 @@
     opacity: 1;
 
     pointer-events: auto;
+  }
+}
+
+.modal__title {
+  margin: 0 0 15px;
+  font-family: $ff-roboto-condensed;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 30px;
+  color: $color-default-white;
+}
+
+.modal__text {
+  margin: 0 0 40px;
+  font-size: 16px;
+  line-height: 20px;
+  color: $color-default-white;
+}
+
+.modal__form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.modal__field {
+  input,
+  textarea {
+    width: 100%;
+    min-height: 50px;
+    padding: 15px;
+    color: $color-default-white;
+    background-color: rgba(4, 20, 39, 0.15);
+    border: none;
+    border-radius: 3px;
+
+    &::placeholder {
+      color: $color-default-white;
+    }
+
+    &:disabled {
+      opacity: 0.5;
+    }
+
+    &:focus-visible {
+      outline-color: $color-black-pearl;
+    }
+  }
+
+  textarea {
+    height: 100%;
+    padding: 25px 15px;
+  }
+
+  &--textarea {
+    min-height: 155px;
+    margin-bottom: 5px;
+  }
+}
+
+.modal__element-error-text {
+  position: absolute;
+  font-size: 12px;
+  line-height: 12px;
+  color: $color-fire-brick;
+}
+
+.modal__btn {
+  height: max-content;
+  margin-bottom: 15px;
+  padding: 15px 25px 13px;
+  border: none;
+  background-color: $color-black-pearl-form;
+}
+
+.modal__control {
+  position: relative;
+
+  label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    &:focus-within {
+      .modal__control-label {
+        outline: $color-black-pearl auto 1px;
+        outline-offset: 5px;
+      }
+    }
+
+    input:checked {
+      + .modal__control-mark::after {
+        content: "";
+        position: absolute;
+        top: 2px;
+        left: 4px;
+        width: 4px;
+        height: 6px;
+        border-right: 1px solid $color-default-white;
+        border-bottom: 1px solid $color-default-white;
+        transform: rotate(45deg);
+      }
+    }
+
+    input:disabled {
+      ~ span {
+        opacity: 0.5;
+        cursor: default;
+      }
+    }
+  }
+
+  .modal__element-error-text {
+    bottom: -20px;
+  }
+
+  input + span {
+    position: relative;
+    display: block;
+    width: 15px;
+    height: 15px;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    margin-left: 5px;
+    margin-right: 15px;
+    background-color: $color-deep-sky-blue;
+    border: 1px solid $color-default-white;
+    border-radius: 2px;
+    opacity: 1;
+  }
+
+  span {
+    margin: 0;
+    font-size: 14px;
+    line-height: 15px;
+    color: $color-default-white;
+    opacity: 0.8;
   }
 }
