--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,12 +24,13 @@
 @import "blocks/advantages";
 @import "blocks/about";
 @import "blocks/catalog";
+@import "blocks/feedback";
 @import "blocks/footer";
 @import "blocks/social";
 @import "blocks/nav";
 @import "blocks/contacts";
 @import "blocks/accordion";
-//@import "blocks/modal";
+@import "blocks/modal";
 
 // ---------------------------------
 
