--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,6 +18,7 @@ $color-alice-blue-bg: #f8fdff;
 $color-deep-sky-blue: #00b2ff;
 $color-whisper: #e5e5e5;
 $color-whisper-border: #ebebeb;
+$color-fire-brick: #b22222;
 
 // Gradient
 
