--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -145,11 +145,13 @@
       color: $color-default-white;
 
       @include vp-1023 {
+        margin: 36px 0;
         padding-left: 45px;
         padding-right: 460px;
       }
 
       @include vp-767 {
+        margin: 26px 0;
         padding: 0 90px 0 30px;
         font-size: 18px;
       }
