--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  margin-bottom: 120px;
+  margin-bottom: 117px;
 
   @include vp-1023 {
     margin-bottom: 80px;
@@ -24,14 +24,14 @@
 }
 
 .advantages__item {
-  padding: 40px 45px 35px;
+  padding: 40px 42px 35px;
   min-height: 300px;
   color: $color-deep-sky-blue;
   border: 1px solid $color-whisper-border;
   border-left: 5px solid $color-deep-sky-blue;
 
   h3 {
-    margin: 20px 0 15px;
+    margin: 14px 0 13px;
     font-family: $ff-roboto-condensed;
     font-weight: 400;
     font-size: 24px;
@@ -42,8 +42,10 @@
     }
 
     @include vp-767 {
+      margin-top: 11px;
+      margin-bottom: 10px;
       font-size: 20px;
-      line-height: 20px;
+      line-height: 28px;
     }
   }
 
@@ -67,7 +69,12 @@
   }
 
   @include vp-767 {
-    padding: 30px 30px 35px;
+    padding: 30px 25px 35px;
     min-height: 340px;
+
+    svg {
+      width: 30px;
+      height: 30px;
+    }
   }
 }
