--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,11 +5,11 @@
   line-height: 16px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
-  margin: 0 0 20px 0;
+  margin: 0 0 22px 0;
 
   @include vp-767 {
     margin: 0;
-    padding: 20px 40px 15px 0;
+    padding: 20px 40px 18px 0;
   }
 }
 
@@ -23,6 +23,10 @@
   margin-bottom: 10px;
   font-style: normal;
   color: transparentize($color-default-white, 0.3);
+
+  @include vp-767 {
+    margin-bottom: 21px;
+  }
 }
 
 .contacts__phone {
