--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 120px;
+  gap: 36px;
   align-items: center;
   padding-top: 170px;
   padding-bottom: 250px;
@@ -36,7 +36,7 @@
   }
 
   @include vp-767 {
-    padding-top: 50px;
+    padding-top: 48px;
     padding-bottom: 90px;
   }
 }
@@ -44,6 +44,7 @@
 .feedback__image-desktop {
   position: relative;
   width: 100%;
+  max-width: 510px;
   z-index: 1;
 
   @include vp-1023 {
@@ -132,13 +133,21 @@
 
   &--textarea {
     grid-column: 1 / -1;
+    margin-bottom: 15px;
+
+    @include vp-767 {
+      margin-bottom: 10px;
+    }
 
     label {
-      min-height: 155px;
-      margin-bottom: 15px;
+      textarea {
+        box-sizing: border-box;
+        min-height: 150px;
 
-      @include vp-767 {
-        margin-bottom: 10px;
+
+        @include vp-767 {
+          min-height: 177px;
+        }
       }
     }
   }
@@ -159,11 +168,22 @@
 
   @include vp-767 {
     margin-bottom: 5px;
+    font-size: 16px;
+    letter-spacing: 0.05em;
   }
 }
 
 .feedback__control {
   position: relative;
+  margin-top: 15px;
+
+  @include vp-1023 {
+    margin-top: 8px;
+  }
+
+  @include vp-767 {
+    margin-top: 0;
+  }
 
   label {
     display: flex;
