--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -17,7 +17,7 @@
 }
 
 .footer__logo-wrapper {
-  padding: 50px 20px 55px 0;
+  padding: 50px 20px 40px 0;
   margin-right: auto;
   width: 25vw;
   min-width: 235px;
@@ -34,7 +34,7 @@
   @include vp-767 {
     position: relative;
     flex-direction: column;
-    padding: 35px 0 25px;
+    padding: 35px 0 14px;
 
     &::before {
       content: "";
@@ -62,7 +62,7 @@
 
 .footer__nav {
   width: 45vw;
-  padding: 55px 0;
+  padding: 57px 0 40px 70px;
 
   @include vp-1023 {
     width: auto;
@@ -89,7 +89,7 @@
   margin-left: auto;
   width: 30vw;
   max-width: 345px;
-  padding: 55px 0;
+  padding: 57px 0 37px;
 
   @include vp-1023 {
     width: auto;
