--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -14,10 +14,11 @@
 .header__logo-link {
   flex-shrink: 0;
   padding: 30px 0 35px;
-  margin-right: 10px;
+  margin-right: 100px;
 
   @include vp-1023 {
     padding: 20px 0 25px;
+    margin-right: 10px;
   }
 
   @include vp-767 {
@@ -46,11 +47,11 @@
 
   @include vp-1023 {
     justify-content: flex-end;
-    padding: 20px 0 40px;
+    padding: 20px 34px 40px 0;
   }
 
   @include vp-767 {
-    padding: 10px 0 20px;
+    padding: 10px 10px 20px 0;
   }
 }
 
@@ -100,7 +101,7 @@
 .header__btn {
   width: 160px;
   height: 40px;
-  margin: 35px 0 40px 10px;
+  margin: 28px 60px 40px 105px;
   box-sizing: border-box;
   flex-shrink: 0;
 
