--- a/source/sass/blocks/top-section.scss
+++ b/source/sass/blocks/top-section.scss
@@ -11,8 +11,8 @@
 
   @include vp-1023 {
     margin-bottom: 80px;
-    padding-top: 180px;
-    padding-bottom: 205px;
+    padding-top: 188px;
+    padding-bottom: 206px;
   }
 
   @include vp-767 {
@@ -37,7 +37,7 @@
 }
 
 .top-section__title {
-  margin: 0 0 40px;
+  margin: 0 0 36px;
   padding-left: 125px;
   font-family: $ff-roboto-condensed;
   font-weight: 700;
@@ -49,20 +49,20 @@
 
   @include vp-1023 {
     padding: 0;
-    margin-bottom: 20px;
+    margin-bottom: 6px;
     font-size: 64px;
     line-height: 60px;
   }
 
   @include vp-767 {
     font-size: 36px;
-    line-height: 38px;
-    margin-bottom: 19px;
+    line-height: 43px;
+    margin-bottom: 8px;
   }
 }
 
 .top-section__text {
-  margin: 0 0 40px;
+  margin: 0 0 44px;
   padding-left: 125px;
   font-weight: 400;
   font-size: 22px;
@@ -71,13 +71,13 @@
 
   @include vp-1023 {
     padding: 0;
-    margin-bottom: 50px;
+    margin-bottom: 55px;
   }
 
   @include vp-767 {
     font-size: 14px;
-    line-height: 18px;
-    margin-bottom: 49px;
+    line-height: 20px;
+    margin-bottom: 46px;
 
     br {
       display: none;
@@ -100,6 +100,7 @@
 
   @include vp-767 {
     margin: 0;
+    width: 100%;
     padding: 10px 30px;
     font-size: 14px;
     line-height: 20px;
