Добавляет правки по код-ревью

--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,6 +1,7 @@
 .btn {
   display: inline-flex;
   padding: 10px 15px;
+  vertical-align: middle;
 
   font-family: $ff-roboto-condensed;
   font-weight: 700;
