--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -32,22 +32,22 @@
       margin-bottom: 13px;
     }
   }
-}
 
-.about__title {
-  margin: 5px 0 15px;
-  font-family: $ff-roboto-condensed;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 45px;
+  h2 {
+    margin: 5px 0 15px;
+    font-family: $ff-roboto-condensed;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 45px;
 
-  @include vp-1023 {
-    margin-top: 0;
-  }
+    @include vp-1023 {
+      margin-top: 0;
+    }
 
-  @include vp-767 {
-    font-size: 28px;
-    line-height: 35px;
+    @include vp-767 {
+      font-size: 28px;
+      line-height: 35px;
+    }
   }
 }
 
