--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,10 @@
 .catalog {
+  background-color: $color-black-pearl;
+}
+
+.catalog__wrapper {
   padding-top: 70px;
   padding-bottom: 140px;
-  background-color: $color-black-pearl;
 
   @include vp-1439 {
     padding-top: 70px;
@@ -63,43 +66,39 @@
   }
 
   &:nth-child(3n+1) {
-    a {
-      img {
-        bottom: -51px;
-        left: -189px;
+    img {
+      bottom: -51px;
+      left: -189px;
 
-        @include vp-1023 {
-          bottom: -18px;
-          left: -244px;
-        }
+      @include vp-1023 {
+        bottom: -18px;
+        left: -244px;
+      }
 
-        @include vp-767 {
-          bottom: -268px;
-          left: -375px;
-        }
+      @include vp-767 {
+        bottom: -268px;
+        left: -375px;
       }
     }
   }
 
   &:nth-child(3n+3) {
-    a {
-      img {
-        top: auto;
-        bottom: -57px;
+    img {
+      top: auto;
+      bottom: -57px;
+      left: auto;
+      right: -249px;
+
+      @include vp-1023 {
+        right: auto;
+        left: -148px;
+        bottom: -208px;
+      }
+
+      @include vp-767 {
         left: auto;
-        right: -249px;
-
-        @include vp-1023 {
-          right: auto;
-          left: -148px;
-          bottom: -208px;
-        }
-
-        @include vp-767 {
-          left: auto;
-          right: -339px;
-          bottom: -173px;
-        }
+        right: -339px;
+        bottom: -173px;
       }
     }
   }
@@ -110,65 +109,6 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-
-    img {
-      position: absolute;
-      width: 1494px;
-      height: 818px;
-      max-width: none;
-      bottom: -46px;
-      left: -534px;
-      object-fit: cover;
-      background-color: $color-deep-sky-blue;
-      z-index: -1;
-
-      @include vp-1023 {
-        left: auto;
-        bottom: -253px;
-        right: -195px;
-      }
-
-      @include vp-767 {
-        bottom: -30px;
-        right: auto;
-        left: -365px;
-      }
-    }
-
-    p {
-      margin: 50px 0;
-      padding: 0 40px;
-      font-family: $ff-roboto-condensed;
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 30px;
-      color: $color-default-white;
-
-      @include vp-1023 {
-        margin: 36px 0;
-        padding-left: 45px;
-        padding-right: 460px;
-      }
-
-      @include vp-767 {
-        margin: 26px 0;
-        padding: 0 90px 0 30px;
-        font-size: 18px;
-      }
-    }
-
-    svg {
-      position: absolute;
-      width: 5px;
-      height: 10px;
-      right: 26px;
-      bottom: 26px;
-
-      @include vp-767 {
-        right: 16px;
-        bottom: 16px;
-      }
-    }
 
     &::before {
       content: "";
@@ -184,6 +124,65 @@
         width: 40px;
         height: 40px;
       }
+    }
+  }
+
+  img {
+    position: absolute;
+    width: 1494px;
+    height: 818px;
+    max-width: none;
+    bottom: -46px;
+    left: -534px;
+    object-fit: cover;
+    background-color: $color-deep-sky-blue;
+    z-index: -1;
+
+    @include vp-1023 {
+      left: auto;
+      bottom: -253px;
+      right: -195px;
+    }
+
+    @include vp-767 {
+      bottom: -30px;
+      right: auto;
+      left: -365px;
+    }
+  }
+
+  p {
+    margin: 50px 0;
+    padding: 0 40px;
+    font-family: $ff-roboto-condensed;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: $color-default-white;
+
+    @include vp-1023 {
+      margin: 36px 0;
+      padding-left: 45px;
+      padding-right: 460px;
+    }
+
+    @include vp-767 {
+      margin: 26px 0;
+      padding: 0 90px 0 30px;
+      font-size: 18px;
+    }
+  }
+
+  svg {
+    position: absolute;
+    width: 5px;
+    height: 10px;
+    right: 26px;
+    bottom: 26px;
+
+    @include vp-767 {
+      right: 16px;
+      bottom: 16px;
     }
   }
 }
