--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,11 +1,5 @@
 .feedback {
   position: relative;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 36px;
-  align-items: center;
-  padding-top: 170px;
-  padding-bottom: 250px;
   background-color: $color-deep-sky-blue;
 
   &::before {
@@ -17,7 +11,20 @@
     top: 0;
     background-color: rgba(4, 24, 39, 0.5);
     clip-path: polygon(0 0, 100% 0, 0 100%);
+
+    @include vp-1023 {
+      display: none;
+    }
   }
+}
+
+.feedback__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 36px;
+  align-items: center;
+  padding-top: 170px;
+  padding-bottom: 250px;
 
   @include vp-1439 {
     padding-top: 85px;
@@ -29,10 +36,6 @@
     gap: 0;
     padding-top: 50px;
     padding-bottom: 125px;
-
-    &::before {
-      display: none;
-    }
   }
 
   @include vp-767 {
@@ -52,7 +55,7 @@
   }
 }
 
-.feedback__wrapper {
+.feedback__form-wrapper {
   z-index: 1;
 }
 
@@ -139,15 +142,13 @@
       margin-bottom: 10px;
     }
 
-    label {
-      textarea {
-        box-sizing: border-box;
-        min-height: 150px;
+    textarea {
+      box-sizing: border-box;
+      min-height: 150px;
 
 
-        @include vp-767 {
-          min-height: 177px;
-        }
+      @include vp-767 {
+        min-height: 177px;
       }
     }
   }
@@ -185,42 +186,42 @@
     margin-top: 0;
   }
 
+  &:focus-within {
+    label {
+      outline: $color-black-pearl auto 1px;
+      outline-offset: 5px;
+    }
+  }
+
+  input:checked {
+    + span::after {
+      content: "";
+      position: absolute;
+      top: 2px;
+      left: 4px;
+      width: 4px;
+      height: 6px;
+      border-right: 1px solid $color-default-white;
+      border-bottom: 1px solid $color-default-white;
+      transform: rotate(45deg);
+    }
+  }
+
+  input:disabled {
+    ~ span {
+      opacity: 0.5;
+      cursor: default;
+    }
+  }
+
   label {
     display: flex;
     align-items: center;
     cursor: pointer;
-
-    &:focus-within {
-      .feedback__control-label {
-        outline: $color-black-pearl auto 1px;
-        outline-offset: 5px;
-      }
-    }
-
-    input:checked {
-      + span::after {
-        content: "";
-        position: absolute;
-        top: 2px;
-        left: 4px;
-        width: 4px;
-        height: 6px;
-        border-right: 1px solid $color-default-white;
-        border-bottom: 1px solid $color-default-white;
-        transform: rotate(45deg);
-      }
-    }
-
-    input:disabled {
-      ~ span {
-        opacity: 0.5;
-        cursor: default;
-      }
-    }
   }
 
   .feedback__element-error-text {
-    bottom: -10px;
+    bottom: -20px;
   }
 
   input + span {
