--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,14 +1,15 @@
 .header {
-  position: fixed;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
+  margin-bottom: -20px;
+}
+
+.header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
-  z-index: 10;
-
-  @include vp-1920 {
-    left: calc((100% - 1920px) / 2);
-  }
 }
 
 .header__logo-link {
@@ -79,21 +80,21 @@
     @include vp-1023 {
       padding: 10px;
     }
+  }
 
-    svg {
-      width: 20px;
-      height: 20px;
-      margin-right: 15px;
+  svg {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
 
-      @include vp-1023 {
-        margin-right: 0;
-      }
+    @include vp-1023 {
+      margin-right: 0;
     }
+  }
 
-    span {
-      @include vp-1023 {
-        display: none;
-      }
+  span {
+    @include vp-1023 {
+      display: none;
     }
   }
 }
