--- a/source/sass/blocks/top-section.scss
+++ b/source/sass/blocks/top-section.scss
@@ -1,5 +1,8 @@
 .top-section {
   position: relative;
+}
+
+.top-section__wrapper {
   margin-bottom: 120px;
   padding-top: 305px;
   padding-bottom: 280px;
