--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -33,4 +33,8 @@
   display: block;
   margin-bottom: 10px;
   color: transparentize($color-default-white, 0.3);
+
+  &:hover {
+    color: $color-default-white;
+  }
 }
