--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -149,6 +149,10 @@
     border: none;
     border-radius: 3px;
 
+    &:hover {
+      background-color: rgba(4, 20, 39, 0.25);
+    }
+
     &::placeholder {
       color: $color-default-white;
     }
@@ -215,6 +219,12 @@
     ~ span {
       opacity: 0.5;
       cursor: default;
+    }
+  }
+
+  input:hover {
+    ~ span {
+      opacity: 1;
     }
   }
 
