--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -7,6 +7,10 @@
   padding: 5px;
   margin-right: 15px;
 
+  &:hover {
+    opacity: 0.8;
+  }
+
   @include vp-1023 {
     margin: 0 0 0 15px;
   }
