--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -11,6 +11,7 @@
     max-width: none;
     height: 320px;
     margin-right: 100px;
+    background-color: inherit;
 
     @include vp-1023 {
       margin-right: 29px;
