--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,19 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 10;
-  background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
+  min-width: 320px;
   margin-bottom: -20px;
+  z-index: 10;
+  background: $color-black-pearl;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -19px;
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(180deg, $color-black-pearl, rgba(4, 24, 39, 0) 100%);
+  }
 }
 
 .header__wrapper {
