--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -46,6 +46,7 @@
     }
 
     @include vp-767 {
+      margin-bottom: 14px;
       font-size: 28px;
       line-height: 35px;
     }
@@ -55,6 +56,10 @@
 .about__hidden-block {
   &--close {
     display: none;
+  }
+
+  &--on-mobile {
+    display: inline;
   }
 }
 
