--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -20,16 +20,11 @@
 
 .feedback__wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 590px;
   gap: 36px;
   align-items: center;
   padding-top: 170px;
   padding-bottom: 250px;
-
-  @include vp-1439 {
-    padding-top: 85px;
-    padding-bottom: 125px;
-  }
 
   @include vp-1023 {
     grid-template-columns: 1fr;
@@ -169,12 +164,18 @@
 .feedback__btn {
   height: max-content;
   padding: 15px 25px 13px;
+  margin-right: 13px;
+  font-size: 16px;
   border: none;
   background-color: $color-black-pearl-form;
 
+  @include vp-1023 {
+    margin-right: 56px;
+  }
+
   @include vp-767 {
-    margin-bottom: 5px;
-    font-size: 16px;
+    margin-right: 0;
+    margin-bottom: 4px;
     letter-spacing: 0.05em;
   }
 }
@@ -182,13 +183,16 @@
 .feedback__control {
   position: relative;
   margin-top: 15px;
+  order: 1;
 
   @include vp-1023 {
-    margin-top: 8px;
+    margin-top: 10px;
+    margin-left: -5px;
   }
 
   @include vp-767 {
     margin-top: 0;
+    margin-left: 0;
   }
 
   &:focus-within {
@@ -242,12 +246,17 @@
     height: 15px;
     flex-shrink: 0;
     box-sizing: border-box;
-    margin-left: 5px;
-    margin-right: 15px;
+    margin-left: 6px;
+    margin-right: 11px;
     background-color: $color-deep-sky-blue;
     border: 1px solid $color-default-white;
     border-radius: 2px;
     opacity: 1;
+
+    @include vp-1023 {
+      margin-left: 5px;
+      margin-right: 10px;
+    }
   }
 
   span {
