--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -10,6 +10,7 @@
   @include vp-1023 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 0 30px;
   }
 
   @include vp-767 {
@@ -31,13 +32,13 @@
     align-items: center;
     grid-column: 1 / -1;
     width: 100%;
-    padding: 50px 0 35px;
+    padding: 50px 0 38px;
   }
 
   @include vp-767 {
     position: relative;
     flex-direction: column;
-    padding: 35px 0 14px;
+    padding: 35px 0 20px;
 
     &::before {
       content: "";
@@ -59,13 +60,13 @@
   }
 
   @include vp-767 {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 }
 
 .footer__nav {
   width: 45vw;
-  padding: 57px 0 40px 70px;
+  padding: 57px 0 55px 68px;
 
   @include vp-1023 {
     width: auto;
@@ -92,7 +93,7 @@
   margin-left: auto;
   width: 30vw;
   max-width: 345px;
-  padding: 57px 0 37px;
+  padding: 57px 0 44px;
 
   @include vp-1023 {
     width: auto;
