--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -6,6 +6,10 @@
   z-index: 10;
   background: $color-black-pearl;
 
+  @include vp-1023 {
+    position: relative;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -25,7 +29,7 @@
 .header__logo-link {
   flex-shrink: 0;
   padding: 30px 0 35px;
-  margin-right: 100px;
+  margin-right: 30px;
 
   @include vp-1023 {
     padding: 20px 0 25px;
@@ -47,18 +51,17 @@
 }
 
 .header__contacts-list {
-  width: 100%;
+  min-width: 475px;
   display: flex;
   flex-wrap: wrap;
-  flex-shrink: 1;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0;
-  padding: 39px 0 49px;
+  padding: 39px 5px 49px 0;
   list-style: none;
 
   @include vp-1023 {
     justify-content: flex-end;
-    padding: 20px 34px 40px 0;
+    padding: 20px 20px 40px 0;
   }
 
   @include vp-767 {
@@ -75,6 +78,10 @@
     &:not(:first-child) {
       margin-left: 20px;
     }
+  }
+
+  &:hover {
+    opacity: 0.8;
   }
 }
 
@@ -112,7 +119,7 @@
 .header__btn {
   width: 160px;
   height: 40px;
-  margin: 28px 60px 40px 105px;
+  margin: 28px 60px 40px 30px;
   box-sizing: border-box;
   flex-shrink: 0;
 
