--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -5,21 +5,31 @@
   line-height: 16px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
-  margin: 0 0 20px 0;
+  margin: 0 0 22px 0;
 
   @include vp-767 {
     margin: 0;
-    padding: 20px 40px 25px 0;
+    padding: 23px 40px 22px 0;
+  }
+}
+
+.nav__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  @include vp-1023 {
+    display: block;
   }
 }
 
 .nav__list {
-  margin: 0;
+  margin: 0 28px 0 0;
   padding: 0;
   list-style: none;
-  column-count: auto;
-  column-width: 220px;
-  column-gap: 30px;
+
+  @include vp-1023 {
+    margin-right: 51px;
+  }
 
   @include vp-767 {
     padding-bottom: 10px;
@@ -27,7 +37,11 @@
 }
 
 .nav__item {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+
+  @include vp-1023 {
+    margin-bottom: 7px;
+  }
 }
 
 .nav__link {
