--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -60,6 +60,7 @@
   list-style: none;
 
   @include vp-1023 {
+    min-width: auto;
     justify-content: flex-end;
     padding: 20px 20px 40px 0;
   }
